--- a/config/config-docker.yml
+++ b/config/config-docker.yml
@@ -2,7 +2,7 @@ server:
   internalPort: 5000
   externalPort: 0
   runMode: release
-  domain: localhost
+  domain: 0.0.0.0
   name: bunny-go
   lang: fa
   WriteTimeout: 10s
@@ -11,7 +11,7 @@ logger:
   filePath: /app/logs/
   encoding: json
   level: debug
-  logger: zap
+  logger: zerolog
 cors:
   allowOrigins: "*"
 postgres:
