--- a/config/config-production.yml
+++ b/config/config-production.yml
@@ -11,7 +11,7 @@ logger:
   filePath: logs/
   encoding: json
   level: debug
-  logger: zap
+  logger: zerolog
 cors:
   allowOrigins: "*"
 postgres:
