fix: generate swagger

--- a/config/config-development.yml
+++ b/config/config-development.yml
@@ -1,6 +1,6 @@
 server:
-  internalPort: 5005
-  externalPort: 5005
+  internalPort: 8000
+  externalPort: 8000
   runMode: debug
   domain: localhost
   name: bunny-go
@@ -8,7 +8,7 @@ server:
   WriteTimeout: 10s
   ReadTimeout: 10s
 logger:
-  filePath: ./logs/
+  filePath: ../logs/
   encoding: json
   level: debug
   logger: zerolog
@@ -48,6 +48,4 @@ otp:
   limiter: 100
 jwt:
   secret: "mySecretKey"
-  refreshSecret: "mySecretKey"
   accessTokenExpireDuration: 1440
-  refreshTokenExpireDuration: 60
